agregada pagina reservar para cuando se termine de programar en la otra rama

--- a/Hotelera/Hotelera.csproj
+++ b/Hotelera/Hotelera.csproj
@@ -81,6 +81,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Registro.aspx" />
+    <Content Include="Reservar.aspx" />
     <Content Include="Reservas.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -120,6 +121,13 @@
     </Compile>
     <Compile Include="Registro.aspx.designer.cs">
       <DependentUpon>Registro.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Reservar.aspx.cs">
+      <DependentUpon>Reservar.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Reservar.aspx.designer.cs">
+      <DependentUpon>Reservar.aspx</DependentUpon>
     </Compile>
     <Compile Include="Reservas.aspx.cs">
       <DependentUpon>Reservas.aspx</DependentUpon>
