--- a/Hotelera/Hotelera.csproj
+++ b/Hotelera/Hotelera.csproj
@@ -66,6 +66,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="CambiaClave.aspx" />
     <Content Include="Cuenta.aspx" />
     <Content Include="Images\logo.png" />
     <Content Include="Inicio.aspx" />
@@ -86,6 +87,13 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CambiaClave.aspx.cs">
+      <DependentUpon>CambiaClave.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CambiaClave.aspx.designer.cs">
+      <DependentUpon>CambiaClave.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Cuenta.aspx.cs">
       <DependentUpon>Cuenta.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
